# SSEPOC

backend/: .gitignore  main.py  pyproject.toml  requirements.txt  vercel.json
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/components/: AIChatTab.tsx  ManualSSEChat.tsx
frontend/app/hooks/: useStreamingChat.ts
